add trends graph
and a few fixes: in API implementation

--- a/DIoTY/public/openapi.html
+++ b/DIoTY/public/openapi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "html">
+﻿<!DOCTYPE html PUBLIC "html">
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
