fix turn on/off bug

--- a/DIoTY/public/api-test.html
+++ b/DIoTY/public/api-test.html
@@ -1,8 +1,8 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="kr">
 <head>
     <meta charset="utf-8" />
-    <script src="javascripts/api.ts.js"></script>
+    <script src="javascripts/api.js"></script>
     <script src="javascripts/api-sample.js"></script>
     <title>Open API test in the client side</title>
 </head>
